Strings - components/browser/errorpages/src/main/res/values-zh-rTW/strings.xml

--- a/components/browser/errorpages/src/main/res/values-zh-rTW/strings.xml
+++ b/components/browser/errorpages/src/main/res/values-zh-rTW/strings.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <!-- The default document title of an error page (i.e., the contents of the `<title>` tag). -->
-    <string name="mozac_browser_errorpages_page_title">頁面載入發生問題</string>
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:moz="http://mozac.org/tools">
 
     <!-- The button that appears at the bottom of an error page. -->
     <string name="mozac_browser_errorpages_page_refresh">重試</string>
-
-    <!-- The button that appears at the bottom of an error page. -->
-    <string name="mozac_browser_errorpages_page_go_back">回上一頁</string>
 
     <!-- The document title and heading of an error page shown when a website cannot be loaded for an unknown reason. -->
     <string name="mozac_browser_errorpages_generic_title">無法完成要求</string>
@@ -46,6 +41,25 @@
     <string name="mozac_browser_errorpages_security_bad_cert_back">返回上一頁（建議）</string>
     <!-- The text shown inside the advanced options button used to bypass the invalid SSL certificate. It's only shown if the user has expanded the advanced options. -->
     <string name="mozac_browser_errorpages_security_bad_cert_accept_temporary">接受風險並繼續</string>
+
+    <!-- The document title and heading of the error page shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_title">此網站要求必須使用安全連線。</string>
+    <!-- The error message shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_message"><![CDATA[      <ul>
+         <li>由於此網站必須使用安全性連線，無法顯示您嘗試檢視的頁面。</li>
+         <li>這個問題最有可能是由於網站端的設定不正確，無法由您調整設定解決。</li>
+         <li>可以通知網站管理員處理。</li>
+      </ul>]]></string>
+
+    <!-- The text shown inside the advanced button used to expand the advanced options. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_advanced">進階…</string>
+
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string moz:removedIn="104" name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo" tools:ignore="UnusedResources"><![CDATA[<label><b>%1$s</b> 有一條稱為 HTTP Strict Transport Security (HSTS) 的安全性政策，讓 <b>%2$s</b> 僅能與其進行安全連線。您無法加入例外，手動排除此政策。]]></string>
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo2"><![CDATA[<label><b>%1$s</b> 有一條稱為 HTTP Strict Transport Security (HSTS) 的安全性政策，讓 <b>%2$s</b> 僅能與其進行安全連線。您無法加入例外，手動排除此政策。</label>]]></string>
+    <!-- The text shown inside the advanced options button used to go back. It's only shown if the user has expanded the advanced options. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_back">回上一頁</string>
 
     <!-- The document title and heading of the error page shown when the user's network connection is interrupted while connecting to a website. -->
     <string name="mozac_browser_errorpages_net_interrupt_title">連線中斷</string>
@@ -263,4 +277,10 @@
 	<p>%1$s 這個網站被回報為詐騙網站，已依照您的安全性偏好設定予以封鎖。</p>
 	]]></string>
 
-    </resources>
+    <!-- The title of the error page for websites that do not support HTTPS when HTTPS-Only is turned on -->
+    <string name="mozac_browser_errorpages_httpsonly_title">無法使用安全網站</string>
+    <!-- The text of the error page for websites that do not support HTTPS when HTTPS-Only is turned on. %1$s will be replaced with the URL of the website. -->
+    <string name="mozac_browser_errorpages_httpsonly_message"><![CDATA[為了加強安全性，您開啟了純 HTTPS 模式，但 <em>%1$s</em> 的 HTTPS 版本無法使用。]]></string>
+    <!-- Button on error page for websites that do not support HTTPS when HTTPS-Only is turned on. Clicking the button allows the user to nevertheless load the website using HTTP. -->
+    <string name="mozac_browser_errorpages_httpsonly_button">繼續前往 HTTP 網站</string>
+</resources>
